--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
   },
