--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mysql2": "^3.14.1"
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3"
   }
 }
