--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "multer": "^2.0.0",
     "node": "^22.16.0",
     "react": "^19.1.0",
