--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "mysql2": "^3.14.1",
+    "node-cron": "^4.2.0",
     "nodemailer": "^7.0.3"
   },
   "devDependencies": {
